// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CallToAction should match a snapshot 1`] = `
<div
  className=""
  data-test=""
>
  <Alert
    className="mb-0"
    message="My title"
    type="success"
  />
  <FlexContainerBasic
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <p />
    <div
      className="has-text-right"
    >
      <Button
        dataTest=""
        type="button"
        variant="primary"
      >
        My button
      </Button>
    </div>
  </FlexContainerBasic>
</div>
`;

exports[`CallToAction should match snapshot with footerItems 1`] = `
<div
  className=""
  data-test=""
>
  <Alert
    className="mb-0"
    message="Test"
    type="success"
  />
  <FlexContainerBasic
    flexColumn={true}
    hasBackground={true}
    hasPadding={true}
  >
    <p />
    <div
      className="has-text-right"
    >
      <Button
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        My Apps
      </Button>
      <Button
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        Submit another app
      </Button>
    </div>
  </FlexContainerBasic>
</div>
`;
